app/main/default/objects/FlosumBackup__Restore_Information__c/fields/FlosumBackup__Data__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>