app/main/default/objects/FlosumBackup__Restore_Information__c/fields/FlosumBackup__Processed_Object__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Processed_Object__c</fullName>
        <label>Processed Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>