app/main/default/objects/FlosumBackup__Restore_Information__c/fields/FlosumBackup__Restore__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FlosumBackup__Restore__c</fullName>
        <label>Restore</label>
        <referenceTo>FlosumBackup__Restore__c</referenceTo>
        <relationshipLabel>Restore Informations</relationshipLabel>
        <relationshipName>Restore_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>